# kml-route-with-time-markers

./: .gitignore  README.md  pyproject.toml
code/: add-markers-to-route.py
data/input/: helsinki-half-route.kml
data/output/: route_with_time_markers.kml
