[tool.poetry]
name = "kml-route-with-time-markers"
version = "0.1.0"
description = ""
authors = ["Adam Hrin <adam.hrin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
simplekml = "^1.3.6"
haversine = "^2.8.0"
fastkml = "^0.12"
hereutil = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
